"Updated VSCode settings and modified HTML files (contact.html and index.html) with added script tags, form ID, and favicon."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
         "btns",
         "itemss",
         "quantitys"
-    ]
+    ],
+    "files.autoSave": "onWindowChange",
+    "editor.fontSize": 12,
+    "editor.accessibilityPageSize": 100,
+    "editor.cursorSmoothCaretAnimation": "on"
 }
